--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-Please download StoneValley project here:
+Please download StoneValley and svregex project here:
 https://github.com/coshcage/StoneValley
-This program needs the support of StoneValley.
+https://github.com/coshcage/svregex
+This program needs the support of StoneValley and svregex.
 Thank you to use and share.
 013123 cosh.cage#hotmail.com
